<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:background="@color/fondo_witcher">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_witcher"
        android:contentDescription="@string/logo_desc"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/textoBienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_app"
        android:textSize="18sp"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textoApodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_apodo"
        android:textSize="16sp"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/inputApodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apodo"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/textoCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_correo"
        android:textSize="16sp"
        android:textColor="@color/blanco"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:background="@android:drawable/editbox_background"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_continuar"
        android:layout_marginTop="20dp"/>
</LinearLayout>

